# llm-redteam

./: .cursorrules  .env.example  .gitignore  README.md  api.py  dashboard.py  database.py  evaluator.py  evaluator_spike.py  pyproject.toml  requirements.txt  run_eval.py  streamlit_app.py  target.py  test_real_prompts.py
.streamlit/: config.toml
archive/: NOTES.md
archive/evaluator_versions/: README.md  evaluator_v2.py  evaluator_v3.py
archive/method1_method2_legacy/: api.py  dashboard.py  database.py  evaluator_llm.py  run_eval.py  target.py
archive/scripts_legacy/: evaluator_spike.py  test_real_prompts.py
data/: manual_review_cases.csv  manual_review_progress.json  results_method3.db
docs/: Project_Proposal_Shek.docx  RESEARCH_PROPOSAL.docx  RESEARCH_PROPOSAL.md  RESULTS_REPORT.md
evaluator_versions/: README.md  evaluator_v1.py
experiments/: README.md
experiments/260318_gpt-4o-mini/: results.jsonl
experiments/method1_gpt35turbo_260318/: results.jsonl
experiments/method2_gpt4omini_260325/: results.jsonl
experiments/method3_claudehaiku_260408/: results.jsonl
experiments/method3_gpt4omini_260331/: results.jsonl
experiments/method3_gpt4omini_260408/: results.jsonl
prompts/: fetch_external.py  jailbreakbench.jsonl  loader.py  role_play.py  strongreject.jsonl
prompts/custom/: data_leakage.py  hallucination.py  injections.py  jailbreaks.py
scripts/: generate_proposal.py  test_openai_moderation.py
src/: config.py  dashboard.py  database.py  evaluator.py  generate_figures.py  openrouter_client.py  pipeline.py  review_tool.py  target_runner.py
(+5 files in other folders)
